--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="posts">
                 <p class="posts-1">Total Posts:</p>
-                <p class="posts-2">18 (0.47 posts per day | 0.01 <br> percent of total posts)</p>
+                <p class="posts-2">18 (0.47 posts per day  <br> | 0.01 percent of total posts)</p>
                 <p class="search"><i class="fa-solid fa-magnifying-glass"></i> Find All Posts</p>
             </div>
             <div class="reputation">
