--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="bagian-profil">
                 <div class="name">
-                    <h3 class="name-profil"><i style="color: rgb(255, 230, 0);" class="fa-solid fa-crown"></i> Hmmm</h3>
+                    <h3 class="name-profil"><i style="color: rgb(255, 230, 0);" class="fa-sharp fa-solid fa-crown"></i> Hmmm</h3>
                 </div>
                 <div class="star-profil">
                     <i class="fa-solid fa-star"></i>
