--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
                 <div class="status-profil">
-                    <p class="status">Status: <span>Online</span> (BreachForums Main Index @ 01:58 PM) (Last Visit: Less than 1 minute ago</p>
+                    <p class="status">Status: <span>Online</span> (BreachForums Main Index @ 01:58 PM) (Last Visit: Less than 1 minute ago)</p>
                 </div>
             </div>
         </div>
